fixed jumping content on refresh, added new sorting method and reworked css files

--- a/src/Components/Item/Item.style.scss
+++ b/src/Components/Item/Item.style.scss
@@ -169,14 +169,10 @@
         }
     }
 
-    .itemCard:active {
-
-        .hovered {
-            opacity:1;
-        }
-    
-    
+    .hovered {
+        display: none;
     }
+
     
 
 }
